# dodo

./: .env.example  .gitignore  README.md  pyproject.toml
bruno/dodo/: DELETE_documents_id.bru  GET_documents.bru  GET_documents_id.bru  POST_documents_process_id.bru  POST_documents_query_id.bru  bruno.json
src/celery/: celery.py  tasks.py
src/dodo/: main.py
src/dodo/db/: __init__.py
src/dodo/document/: __init__.py  router.py
src/dodo/llm/: __init__.py
src/dodo/templates/: __init__.py  document-upload.html  index.html
src/dodo/upload/: __init__.py
src/dodo/vectorstore/: __init__.py
src/notebooks/: retriever.ipynb  simple_rag.ipynb
